--- a/index.html
+++ b/index.html
@@ -356,6 +356,102 @@
                   </div>
                 </div>
               </div>
+              <div class="catalogue-item">
+                <div class="card-front">
+                  <div class="front-image">
+                    <img src="./img/catalogue/oil-6.png" alt="">
+                  </div>
+                  <div class="front-name">
+                    FOX
+                  </div>
+                </div>
+                <div class="card-back">
+                  <div class="back-name">
+                    FOX
+                  </div>
+                  <div class="back-text">
+                    Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
+                  </div>
+                  <div class="back-link btn">
+                    <a href="#" class="open-form-popup" id="fox-steel-60w-90">
+                      Подробнее
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-60w-90">
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="catalogue-item">
+                <div class="card-front">
+                  <div class="front-image">
+                    <img src="./img/catalogue/oil-6.png" alt="">
+                  </div>
+                  <div class="front-name">
+                    FOX
+                  </div>
+                </div>
+                <div class="card-back">
+                  <div class="back-name">
+                    FOX
+                  </div>
+                  <div class="back-text">
+                    Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
+                  </div>
+                  <div class="back-link btn">
+                    <a href="#" class="open-form-popup" id="fox-steel-60w-90">
+                      Подробнее
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-60w-90">
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="catalogue-item">
+                <div class="card-front">
+                  <div class="front-image">
+                    <img src="./img/catalogue/oil-6.png" alt="">
+                  </div>
+                  <div class="front-name">
+                    FOX
+                  </div>
+                </div>
+                <div class="card-back">
+                  <div class="back-name">
+                    FOX
+                  </div>
+                  <div class="back-text">
+                    Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
+                  </div>
+                  <div class="back-link btn">
+                    <a href="#" class="open-form-popup" id="fox-steel-60w-90">
+                      Подробнее
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-60w-90">
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="catalogue-item">
+                <div class="card-front">
+                  <div class="front-image">
+                    <img src="./img/catalogue/oil-6.png" alt="">
+                  </div>
+                  <div class="front-name">
+                    FOX
+                  </div>
+                </div>
+                <div class="card-back">
+                  <div class="back-name">
+                    FOX
+                  </div>
+                  <div class="back-text">
+                    Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
+                  </div>
+                  <div class="back-link btn">
+                    <a href="#" class="open-form-popup" id="fox-steel-60w-90">
+                      Подробнее
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-60w-90">
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
