--- a/index.html
+++ b/index.html
@@ -846,28 +846,60 @@
                   </div>
                   <div class="radio-buttons">
                     <div class="radio-button">
-                      <input checked type="radio" class="variance q4-variance" name="q4" id="q4_1" value="q4_1">
+                      <input checked type="checkbox" class="variance q4-variance" name="q4" id="q4_1" value="q4_1">
                       <label for="q4_1">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_2" value="q4_2">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_2" value="q4_2">
                       <label for="q4_2">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_3" value="q4_3">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_3" value="q4_3">
                       <label for="q4_3">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_4" value="q4_4">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_4" value="q4_4">
                       <label for="q4_4">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_5" value="q4_5">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_5" value="q4_5">
                       <label for="q4_5">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_6" value="q4_6">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_6" value="q4_6">
                       <label for="q4_6">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_7" value="q4_7">
+                      <label for="q4_7">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_8" value="q4_8">
+                      <label for="q4_8">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_9" value="q4_9">
+                      <label for="q4_9">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_10" value="q4_10">
+                      <label for="q4_10">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_11" value="q4_11">
+                      <label for="q4_11">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_12" value="q4_12">
+                      <label for="q4_12">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_13" value="q4_13">
+                      <label for="q4_13">Имя бренда</label>
+                    </div>
+                    <div class="radio-button">
+                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_14" value="q4_14">
+                      <label for="q4_14">Имя бренда</label>
                     </div>
                   </div>
                 </div>
@@ -905,13 +937,13 @@
                   </div>
                   <div class="quiz-inputs q5-quiz-inputs">
                     <div class="text-input">
-                      <input id="q5-name" type="text" name="q5-name" placeholder="Полное имя">
+                      <input id="q5-name" type="text" name="q5-name" placeholder="Полное имя" required>
                     </div>
                     <div class="text-input">
-                      <input id="q5-email" type="email" name="q5-email" placeholder="E-mail">
+                      <input id="q5-email" type="email" name="q5-email" placeholder="E-mail" required>
                     </div>
                     <div class="text-input">
-                      <input id="q5-tel" type="tel" name="q5-tel" placeholder="Телефон">
+                      <input id="q5-tel" type="tel" name="q5-tel" placeholder="Телефон" required>
                     </div>
                   </div>
                   <div class="radio-button q5-radio-button">
