--- a/index.html
+++ b/index.html
@@ -846,59 +846,59 @@
                   </div>
                   <div class="radio-buttons">
                     <div class="radio-button">
-                      <input checked type="checkbox" class="variance q4-variance" name="q4" id="q4_1" value="q4_1">
+                      <input checked type="checkbox" class="variance q4-variance" name="q4[]" id="q4_1" value="q4_1">
                       <label for="q4_1">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_2" value="q4_2">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_2" value="q4_2">
                       <label for="q4_2">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_3" value="q4_3">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_3" value="q4_3">
                       <label for="q4_3">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_4" value="q4_4">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_4" value="q4_4">
                       <label for="q4_4">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_5" value="q4_5">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_5" value="q4_5">
                       <label for="q4_5">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_6" value="q4_6">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_6" value="q4_6">
                       <label for="q4_6">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_7" value="q4_7">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_7" value="q4_7">
                       <label for="q4_7">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_8" value="q4_8">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_8" value="q4_8">
                       <label for="q4_8">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_9" value="q4_9">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_9" value="q4_9">
                       <label for="q4_9">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_10" value="q4_10">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_10" value="q4_10">
                       <label for="q4_10">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_11" value="q4_11">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_11" value="q4_11">
                       <label for="q4_11">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_12" value="q4_12">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_12" value="q4_12">
                       <label for="q4_12">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_13" value="q4_13">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_13" value="q4_13">
                       <label for="q4_13">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="checkbox" class="variance q4-variance" name="q4" id="q4_14" value="q4_14">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_14" value="q4_14">
                       <label for="q4_14">Имя бренда</label>
                     </div>
                   </div>
