--- a/index.html
+++ b/index.html
@@ -841,12 +841,12 @@
                       </div>
                     </div>
                   </div>
-                  <div class="quiz-choose">
+                  <div class="quiz-choose q4-choose">
                     Выберите нужный вариант ответа
                   </div>
-                  <div class="radio-buttons">
+                  <div class="radio-buttons q4-checkbox-buttons">
                     <div class="radio-button">
-                      <input checked type="checkbox" class="variance q4-variance" name="q4[]" id="q4_1" value="q4_1">
+                      <input type="checkbox" class="variance q4-variance" name="q4[]" id="q4_1" value="q4_1" checked>
                       <label for="q4_1">Имя бренда</label>
                     </div>
                     <div class="radio-button">
